@@ -91,12 +91,14 @@ function isxdl_Download(hWnd: Integer; URL, Filename: PChar): Integer;
 external 'isxdl_Download@files:isxdl.dll stdcall';
 function isxdl_SetOption(Option, Value: PChar): Integer;
 external 'isxdl_SetOption@files:isxdl.dll stdcall';
-const url = 'http://www.unrealircd.com/downloads/DbgHelp.Dll';
-var didDl: Boolean;
+const dbgurl = 'http://www.unrealircd.com/downloads/DbgHelp.Dll';
+const crturl = 'http://www.unrealircd.com/downloads/msvcr70d.dll';
+var didDbgDl,didCrtDl: Boolean;
 
 function NextButtonClick(CurPage: Integer): Boolean;
 var
 dbghelp,tmp,output: String;
+msvcrt: String;
 m: String;
 hWnd,answer: Integer;
 begin
@@ -104,7 +106,21 @@ begin
     if ((CurPage = wpReady)) then begin
       dbghelp := ExpandConstant('{sys}\DbgHelp.Dll');
       output := ExpandConstant('{app}\DbgHelp.Dll');
+      msvcrt := ExpandConstant('{sys}\msvcr70d.Dll');
       GetVersionNumbersString(dbghelp,m);
+    if (NOT FileExists(msvcrt)) then begin
+      answer := MsgBox('Unreal requires the MS C Runtime 7.0 in order to run, do you wish to install it now?', mbConfirmation, MB_YESNO);
+      if answer = IDYES then begin
+        tmp := ExpandConstant('{tmp}\msvcr70d.Dll');
+        isxdl_SetOption('title', 'Downloading msvcr70d.dll');
+        hWnd := StrToInt(ExpandConstant('{wizardhwnd}'));
+        if isxdl_Download(hWnd, crturl, tmp) = 0 then begin
+          MsgBox('Download and installation of msvcr70d.dll failed, the file must be manually installed. The file can be downloaded at http://www.unrealircd.com/downloads/mscvr70.dll', mbInformation, MB_OK);
+        end else
+          didCrtDl := true;
+      end else
+        MsgBox('In order for Unreal to properly function, you must manually install msvcr70d.dll. The dll can be downloaded from http://www.unrealircd.com/downloads/msvcr70d.dll', mbInformation, MB_OK);
+    end;
     if (NOT FileExists(output)) then begin
           if (NOT FileExists(dbghelp)) then
         m := StringOfChar('0',1);
@@ -114,12 +130,12 @@ begin
           tmp := ExpandConstant('{tmp}\dbghelp.dll');
           isxdl_SetOption('title', 'Downloading DbgHelp.dll');
           hWnd := StrToInt(ExpandConstant('{wizardhwnd}'));
-          if isxdl_Download(hWnd, url, tmp) = 0 then begin
+          if isxdl_Download(hWnd, dbgurl, tmp) = 0 then begin
             MsgBox('Download and installation of DbgHelp.Dll failed, the file must be manually installed. The file can be downloaded at http://www.unrealircd.com/downloads/DbgHelp.Dll', mbInformation, MB_OK);
           end else
-            didDl := true;
+            didDbgDl := true;
         end else
-        MsgBox('In order for Unreal to properly function you must manually install this dll. The dll can be downloaded from http://www.unrealircd.com/downloads/DbgHelp.Dll', mbInformation, MB_OK);
+        MsgBox('In order for Unreal to properly function you must manually install dbghelp.dll. The dll can be downloaded from http://www.unrealircd.com/downloads/DbgHelp.Dll', mbInformation, MB_OK);
       end;
     end;
   end;
@@ -130,9 +146,14 @@ procedure DeInitializeSetup();
 var
 input,output: String;
 begin
-  if (didDl) then begin
+  if (didDbgDl) then begin
     input := ExpandConstant('{tmp}\dbghelp.dll');
     output := ExpandConstant('{app}\dbghelp.dll');
+    FileCopy(input, output, true);
+  end;
+  if (didCrtDl) then begin
+    input := ExpandConstant('{tmp}\msvcr70d.dll');
+    output := ExpandConstant('{sys}\msvcr70d.dll');
     FileCopy(input, output, true);
   end;
 end;
